--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wavefront_obj = "10.0.0"
+obj = "0.10.0"
 nalgebra = "0.31.1"
 image = "0.24.3"
 rand = "0.8.5"
 log="0.4"
 log4rs = "0.11.0"
+grid = "0.8.1"
