--- a/log.yaml
+++ b/log.yaml
@@ -1,27 +1,17 @@
 refresh_rate: 30 seconds
-
+# appender 负责将日志收集到控制台或文件, 可配置多个
 appenders:
   stdout:
+    kind: console
+  file:
     kind: file
-  requests:
-    kind: rolling_file
-    path: "log/requests.log"
+    path: "log/log.log"
     encoder:
-      kind: json
-    policy:
-      kind: compound
-      trigger:
-        kind: size
-        limit: 10 mb
-      roller:
-        kind: fixed_window
-        pattern: '{0}/requests.log.{{}}'
-        base: 1
-        count: 5
-
+      # log 信息模式
+      pattern: " - {m}{n}"
+# 对全局 log 进行配置
 root:
   level: info
   appenders:
-    - stdout
-    - requests
-
+    # - stdout
+    - file
